
* Sandbox decoder linux_cpustats has been renamed to linux_loadavg and the
  corresponding filter cpustats was renamed to loadavg (#1094).

* ESLogstashv0 encoder will now set the @type field to match the ES record
  type specified in the `type_name` setting. This is Logstash behaviour in
  V0. You can revert back to the old method with `use_message_type = true`

Bug Handling
------------

* Protect globals.Stopping with a RWMutex.

* Added support for `fields` config setting to ESLogstashV0Encoder; it was
  already documented, but hadn't been implemented (#1096).

* Fixed deadlock race condition in AMQPOutput shutdown sequence (#824).

Features
--------

* LogstreamerInput now supports seekjournal file hashing for files that are
  less than 500 bytes in length; hash is generated against file contents with
  0 bytes prepended to make 500 bytes of hash content (#972).

* Support environment variables in config files (#1023).

* Add Dockerfiles and example Docker usage to repo

* Encoders can now return (nil, nil) to express that they've swallowed the
  input message without generating any output.

* SandboxEncoder now supports return value of -2 from the process_message call
  to specify that no output is being generated.

* Added schema_influx.lua encoder.

* Added CBUF Librato Encoder.

* Added option to disable re-using TCP connections to the ElasticSearch output

* Added separate env loading file and support for NUM_JOBS env var to Windows
  build (#971).

0.7.3 (2014-MM-DD)
==================

Bug Handling
------------

* Fail gracefully on LogstreamerInput missing `file_match` setting (#1105).

* Fixed issue where ProcessInput wasn't propagating environment variables and
  working directory to repeatedly run (vs. one time, long running) processes
  (#1108).

* UdpInput now removes a Unix datagram socket file at shutdown time if one is
  created at startup.

* Fixed issue with keeping previous EOF state in LogStreamer (#1119).

0.7.2 (2014-10-01)