@@ -438,6 +438,18 @@ HugePages_Free:        0
 			c.Expect(value, gs.Equals, "/sys/block/sda/stat")
 		})
 
+		c.Specify("decodes a message with no leading space", func() {
+			payload := "19092852        0 510563170 15817012 46452019        0 1546950712 262535124        0 23823976 278362684\n"
+			pack.Message.SetPayload(payload)
+
+			_, err = decoder.Decode(pack)
+			c.Assume(err, gs.IsNil)
+
+			value, ok := pack.Message.GetFieldValue("ReadsCompleted")
+			c.Expect(ok, gs.IsTrue)
+			c.Expect(value, gs.Equals, float64(19092852))
+		})
+
 		c.Specify("decodes an invalid message", func() {
 			data := "bogus message"
 			pack.Message.SetPayload(data)
